tree-sitter/tree-sitter-ruby/test/corpus/expressions.txt
================
scope resolution
================

Foo::Bar
::Bar

puts ::Foo::Bar

---

(program
  (scope_resolution
    scope: (constant)
    name: (constant))
  (scope_resolution
    name: (constant))
  (call
    method: (identifier)
    arguments: (argument_list
      (scope_resolution
        scope: (scope_resolution
          name: (constant))
        name: (constant)))))

============
element reference
============

foo[bar]
foo[*bar]
foo[* bar]
foo[]

---

(program
  (element_reference object: (identifier) (identifier))
  (element_reference object: (identifier) (splat_argument (identifier)))
  (element_reference object: (identifier) (splat_argument (identifier)))
  (element_reference object: (identifier)))

============
element reference with string
============

foo["bar"]

---

(program (element_reference (identifier) (string (string_content))))

============
element reference with symbol
============

foo[:bar]

---

(program (element_reference (identifier) (simple_symbol)))

============
element assignment
============

foo[bar] = 1

---

(program (assignment
  left: (element_reference
    object: (identifier)
    (identifier))
  right: (integer)))

===============
vacuous literal
===============

()

---

(program (parenthesized_statements))

===============
empty statement
===============

;

---

(program (empty_statement))

===================
yield without value
===================

yield

---

(program (yield))

=====
yield
=====

yield foo
yield foo, bar
yield(baz)

---

(program
  (yield (argument_list (identifier)))
  (yield (argument_list (identifier) (identifier)))
  (yield (argument_list (identifier))))

===
not
===

not foo

---

(program (unary (identifier)))

===
and
===

foo and bar

---

(program (binary (identifier) (identifier)))

===
or
===

foo or bar

---

(program (binary (identifier) (identifier)))

====================
and or associativity
====================

a or b and c

---

(program (binary (binary (identifier) (identifier)) (identifier)))

========
defined?
========

defined? foo
defined? Foo.bar
defined?(foo)
defined?($foo)
defined?(@foo)
defined?(@äö).should be_true

---

(program
  (unary operand: (identifier))
  (unary operand: (call receiver: (constant) method: (identifier)))
  (unary operand: (parenthesized_statements (identifier)))
  (unary operand: (parenthesized_statements (global_variable)))
  (unary operand: (parenthesized_statements (instance_variable)))
  (call
    receiver: (unary operand: (parenthesized_statements (instance_variable)))
    method: (identifier)
    arguments: (argument_list (identifier))))

==========
assignment
==========

x = y
x = *args
FALSE = "false"
TRUE = "true"
NIL = "nil"

---

(program
  (assignment (identifier) (identifier))
  (assignment (identifier) (splat_argument (identifier)))
  (assignment (constant) (string (string_content)))
  (assignment (constant) (string (string_content)))
  (assignment (constant) (string (string_content))))

=====================
multiple assignment
=====================

x, y = [1, 2]
x, * = [1, 2]
x, *args = [1, 2]
x, y = *foo
self.foo, self.bar = target.a?, target.b
(x, y) = foo
(a, b, c = 1)

---

(program
  (assignment (left_assignment_list (identifier) (identifier)) (array (integer) (integer)))
  (assignment (left_assignment_list (identifier) (rest_assignment)) (array (integer) (integer)))
  (assignment (left_assignment_list (identifier) (rest_assignment (identifier))) (array (integer) (integer)))
  (assignment (left_assignment_list (identifier) (identifier)) (splat_argument (identifier)))
  (assignment (left_assignment_list (call (self) (identifier)) (call (self) (identifier))) (right_assignment_list (call (identifier) (identifier)) (call (identifier) (identifier))))
  (assignment (left_assignment_list (destructured_left_assignment (identifier) (identifier))) (identifier))
  (parenthesized_statements (assignment (left_assignment_list (identifier) (identifier) (identifier)) (integer))))

==================================================
multiple assignment with multiple right hand sides
==================================================

foo = 1, 2
x, y = foo, bar

---

(program
  (assignment (identifier) (right_assignment_list (integer) (integer)))
  (assignment
    (left_assignment_list (identifier) (identifier))
    (right_assignment_list (identifier) (identifier))))

==================================================
destructured left hand side assignment
==================================================

a, (b, c), d, (e, (f, g)) = foo

---

(program
  (assignment
    left: (left_assignment_list
      (identifier)
      (destructured_left_assignment (identifier) (identifier))
      (identifier)
      (destructured_left_assignment
        (identifier)
        (destructured_left_assignment (identifier) (identifier))))
    right: (identifier)))

==========
assignment from method call
==========

x = foo a, b
x = foo a, :b => 1, :c => 2

---

(program
  (assignment (identifier)
    (call (identifier)
      (argument_list (identifier) (identifier))))
  (assignment (identifier)
    (call (identifier)
      (argument_list (identifier) (pair (simple_symbol) (integer)) (pair (simple_symbol) (integer))))))

==========
math assignment
==========

x += y
x -= y
x *= y
x **= y
x /= y
puts "/hi"

---

(program
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (call (identifier) (argument_list (string (string_content)))))

==========
operator assignment
==========

x ||= y
x &&= y
x &= y
x |= y
x %= y
x >>= y
x <<= y
x ^= y

---

(program
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier))
  (operator_assignment (identifier) (identifier)))

===========
conditional
===========

a ? b : c

a ? b
  : c

---

(program
  (conditional
    condition: (identifier)
    consequence: (identifier)
    alternative: (identifier))
  (conditional
    condition: (identifier)
    consequence: (identifier)
    alternative: (identifier)))

===========================================
conditional and character literal ambiguity
===========================================

true ?")":"c"

---
(program (conditional (true) (string (string_content)) (string (string_content))))

===========================================
conditional with reserved identifiers
===========================================

foo ? true: false
foo ? return: false

---

(program
  (conditional (identifier) (true) (false))
  (conditional (identifier) (return) (false)))

===============
inclusive range
===============

a..b

---

(program (range (identifier) (identifier)))

===============
exclusive range
===============

a...b

---

(program (range (identifier) (identifier)))

==========
boolean or
==========

a || b

---

(program (binary (identifier) (identifier)))

===========
boolean and
===========

a && b

---

(program (binary (identifier) (identifier)))

===========
boolean and/or
===========

a || b && c
a && b || c

---

(program
  (binary
    left: (identifier)
    right: (binary
      left: (identifier)
      right: (identifier)))
  (binary
    left: (binary
      left: (identifier)
      right: (identifier))
    right: (identifier)))

==========
relational
==========

a == b
a != b
a === b
a <=> b
a =~ b
a !~ b
a==b
a!=b
a===b
a<=>b
a=~b
a!~b # not a binary operation

---

(program
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (binary left: (identifier) right: (identifier))
  (call
    method: (identifier)
    arguments: (argument_list
      (unary
        operand: (identifier))))
  (comment))
==========
comparison
==========

a < b
a <= b
a > b
a >= b

---

(program
  (binary (identifier) (identifier))
  (binary (identifier) (identifier))
  (binary (identifier) (identifier))
  (binary (identifier) (identifier)))

==========
bitwise or
==========

a | b

---

(program (binary (identifier) (identifier)))

===========
bitwise xor
===========

a ^ b

---

(program (binary (identifier) (identifier)))

===========
bitwise and
===========

a & b

---

(program (binary (identifier) (identifier)))

=====
shift
=====

a >> b
a << b

---

(program
  (binary (identifier) (identifier))
  (binary (identifier) (identifier)))

========
additive
========

a + b

---

(program (binary (identifier) (identifier)))

==============
multiplicative
==============

a * b
a*b
a *b
a* b

---

(program
  (binary
    left: (identifier)
    right: (identifier))
  (binary
    left: (identifier)
    right: (identifier))
  (call
    method: (identifier)
    arguments: (argument_list
      (splat_argument
        (identifier))))
  (binary
    left: (identifier)
    right: (identifier)))

==============
binary operations
==============

2+2*2

---

(program (binary (integer) (binary (integer) (integer))))

===========
unary minus
===========

-a
foo -a, bar
foo(-a, bar)

---

(program
  (unary (identifier))
  (call (identifier) (argument_list (unary (identifier)) (identifier)))
  (call (identifier) (argument_list (unary (identifier)) (identifier))))

===========
binary minus
===========

foo-a
@ivar-1

---

(program
  (binary (identifier) (identifier))
  (binary (instance_variable) (integer)))

===========
exponential
===========

a ** b

---

(program (binary (identifier) (identifier)))

====
minus, call, exponential, range
====

a - 1
a-1
a -1
a- 1
(-1.foo)

a - b
a-b
a -b
a- b
(-b.foo)

-2**10
-x**10

1..-1
1 .. -1
1.. -1
1 ..-1

---

(program
  (binary
    left: (identifier)
    right: (integer))
  (binary
    left: (identifier)
    right: (integer))
  (call
    method: (identifier)
    arguments: (argument_list
      (unary
        operand: (integer))))
  (binary
    left: (identifier)
    right: (integer))
  (parenthesized_statements
    (call
      receiver: (unary
        operand: (integer))
      method: (identifier)))
  (binary
    left: (identifier)
    right: (identifier))
  (binary
    left: (identifier)
    right: (identifier))
  (call
    method: (identifier)
    arguments: (argument_list
      (unary
        operand: (identifier))))
  (binary
    left: (identifier)
    right: (identifier))
  (parenthesized_statements
    (unary
      operand: (call
        receiver: (identifier)
        method: (identifier))))
  (unary
    operand: (binary
      left: (integer)
      right: (integer)))
  (unary
    operand: (binary
      left: (identifier)
      right: (integer)))
  (range
    begin: (integer)
    end: (unary
      operand: (integer)))
  (range
    begin: (integer)
    end: (unary
      operand: (integer)))
  (range
    begin: (integer)
    end: (unary
      operand: (integer)))
  (range
    begin: (integer)
    end: (unary
      operand: (integer))))

==========
complement
==========

!a

---

(program (unary (identifier)))

===============================
method call
===============================

foo
foo()
print "hello"
print("hello")
exit!
exit!()
include?
include?("hello")
include? "hello"
exit! if done
exit!() if done

---

(program
  (identifier)
  (call
    method: (identifier)
    arguments: (argument_list))
  (call
    method: (identifier)
    arguments: (argument_list (string (string_content))))
  (call
    method: (identifier)
    arguments: (argument_list (string (string_content))))
  (call
    method: (identifier))
  (call
    method: (identifier)
    arguments: (argument_list))
  (call
    method: (identifier))
  (call
    method: (identifier)
    arguments: (argument_list (string (string_content))))
  (call
    method: (identifier)
    arguments: (argument_list (string (string_content))))
  (if_modifier
    body: (call
      method: (identifier))
    condition: (identifier))
  (if_modifier
    body: (call
      method: (identifier)
      arguments: (argument_list))
    condition: (identifier)))

====================================
nested unparenthesized method calls
====================================

puts get_name self, true
puts(get_name self, true)

---

(program
  (call
    method: (identifier)
    arguments: (argument_list
      (call
        method: (identifier)
        arguments: (argument_list
          (self)
          (true)))))
  (call
    method: (identifier)
    arguments: (argument_list
      (call
        method: (identifier)
        arguments: (argument_list
          (self)
          (true))))))

===============================
method call with arguments on multiple lines
===============================

foo a,
  b, c

---

(program
  (call
    method: (identifier)
    arguments: (argument_list (identifier) (identifier) (identifier))))

===============================
method call with trailing comma
===============================

foo(a, b,)
foo(bar(a),)

---

(program
  (call (identifier) (argument_list (identifier) (identifier)))
  (call (identifier) (argument_list (call (identifier) (argument_list (identifier))))))

==============================================
keyword arguments, no space, trailing comma
==============================================

foo(a:b)
foo(a_:b)
foo(a2:b)
foo(a_:b,)
foo(a2:b,)

---

(program
  (call (identifier) (argument_list (pair (hash_key_symbol) (identifier))))
  (call (identifier) (argument_list (pair (hash_key_symbol) (identifier))))
  (call (identifier) (argument_list (pair (hash_key_symbol) (identifier))))
  (call (identifier) (argument_list (pair (hash_key_symbol) (identifier))))
  (call (identifier) (argument_list (pair (hash_key_symbol) (identifier)))))

===============================
method call with receiver
===============================

foo.bar
foo.bar()
foo.bar "hi"
foo.bar "hi", 2
foo.bar("hi")
foo.bar("hi", 2)

---

(program
  (call
    receiver: (identifier)
    method: (identifier))
  (call
    receiver: (identifier)
    method: (identifier)
    arguments: (argument_list))
  (call
    receiver: (identifier)
    method: (identifier)
    arguments: (argument_list (string (string_content))))
  (call
    receiver: (identifier)
    method: (identifier)
    arguments: (argument_list (string (string_content)) (integer)))
  (call
    receiver: (identifier)
    method: (identifier)
    arguments: (argument_list (string (string_content))))
  (call
    receiver: (identifier)
    method: (identifier)
    arguments: (argument_list (string (string_content)) (integer))))

===============================
implicit call
===============================

foo[bar].()
foo.(1, 2)

---

(program
  (call
    receiver: (element_reference object: (identifier) (identifier))
    arguments: (argument_list))
  (call
    receiver: (identifier)
    arguments: (argument_list (integer) (integer))))

===============================
implicit call with block
===============================

a.() {}
a.(b: c) do
  d
end

---

(program
  (call
    receiver: (identifier)
    arguments: (argument_list)
    block: (block))
  (call
    receiver: (identifier)
    arguments: (argument_list (pair key: (hash_key_symbol) value: (identifier)))
    block: (do_block
      body: (body_statement (identifier)))))

===============================
call with operator method name
===============================

foo.[]()

---

(program
  (call
    receiver: (identifier)
    method: (operator)
    arguments: (argument_list)))

===============================
method call with :: operator
===============================

foo::bar
::Foo::bar
Foo::Bar::baz

---

(program
  (call (identifier) (identifier))
  (call (scope_resolution (constant)) (identifier))
  (call (scope_resolution (constant) (constant)) (identifier))
)



===============================
method call with safe navigation operator
===============================

foo&.bar

---

(program (call (identifier) (identifier)))

===============================
calls to methods on negated literals
===============================

-1.class.should eq(Fixnum)
-0.1.class

---

(program
  (call
    receiver: (call
      receiver: (unary operand: (integer))
      method: (identifier))
    method: (identifier)
    arguments: (argument_list
  (call
    method: (identifier)
    arguments: (argument_list (constant)))))
  (call
    receiver: (unary operand: (float))
    method: (identifier)))

===============================
method call with hash args
===============================

foo(:a => true)
foo([] => 1)
foo(bar => 1)
foo :a => true, :c => 1

---

(program
  (call (identifier) (argument_list (pair (simple_symbol) (true))))
  (call (identifier) (argument_list (pair (array) (integer))))
  (call (identifier) (argument_list (pair (identifier) (integer))))
  (call (identifier) (argument_list (pair (simple_symbol) (true)) (pair (simple_symbol) (integer)))))

===============================
method call with keyword args
===============================

foo(a: true)
foo a: true
foo B: true
foo a: ;
foo B:

---

(program
  (call (identifier) (argument_list (pair (hash_key_symbol) (true))))
  (call (identifier) (argument_list (pair (hash_key_symbol) (true))))
  (call (identifier) (argument_list (pair (hash_key_symbol) (true))))
  (call (identifier) (argument_list (pair (hash_key_symbol))))
  (call (identifier) (argument_list (pair (hash_key_symbol))))
)

===============================
method call with reserved keyword args
===============================

foo(if: true)
foo alias: true
foo and: true
foo begin: true
foo break: true
foo case: true
foo class: true
foo def: true
foo defined: true
foo do: true
foo else: true
foo elsif: true
foo end: true
foo ensure: true
foo false: true
foo for: true
foo if: true
foo in: true
foo module: true
foo next: true
foo nil: true
foo not: true
foo or: true
foo redo: true
foo rescue: true
foo retry: true
foo return: true
foo self: true
foo super: true
foo then: true
foo true: true
foo undef: true
foo unless: true
foo until: true
foo when: true
foo while: true
foo yield: true
foo yield:

---
